# ow-arcade-bot

./: .gitignore  Cargo.toml  README.md
discord/: Cargo.toml
discord/src/: lib.rs
overwatch/: Cargo.toml  example_today_api_call.json  update_test_json.sh
overwatch/src/: arcade_state.rs  arcade_watcher.rs  lib.rs  owatapi.rs
ow_arcade_cli/: Cargo.toml
ow_arcade_cli/src/: main.rs  subcommand.rs
ow_arcade_lambda/: Cargo.toml
ow_arcade_lambda/src/: main.rs
ow_arcade_watcher/: Cargo.toml  example_watcher_config.json
ow_arcade_watcher/src/: lib.rs  settings.rs
stupids3/: Cargo.toml
stupids3/src/: lib.rs
