[package]
name = "discord"
version = "0.1.0"
authors = ["Scott Schroeder <scottschroeder@sent.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
failure = "0.1.5"
serenity = {version ="0.6.3", features=["rustls_backend"]}
overwatch = {path = "../overwatch"}
