[package]
name = "overwatch"
version = "0.1.0"
authors = ["Scott Schroeder <scottschroeder@sent.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"]}
log = "0.4"
failure = "0.1.5"
serde_json = "1.0"
reqwest = "0.9.19"
stupids3 = {path = "../stupids3"}
