[package]
name = "ow-arcade-lambda"
version = "0.1.0"
authors = ["Scott Schroeder <scottschroeder@sent.com>"]
edition = "2018"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
lambda_runtime = "0.2"
failure = "0.1.5"
pretty_env_logger = "0.3"
log = "0.4"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
ow-arcade-watcher = {path = "../ow_arcade_watcher"}
#stupids3 = {path = "../stupids3"}
