[package]
name = "ow-arcade-watcher"
version = "0.1.0"
authors = ["Scott Schroeder <scottschroeder@sent.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"]}
log = "0.4"
pretty_env_logger = "0.3"
clap = "2.33.0"
failure = "0.1.5"
serde_json = "1.0"
config = "0.9.3"
overwatch = {path = "../overwatch"}
stupids3 = {path = "../stupids3"}
discord = {path = "../discord"}


