[package]
name = "stupids3"
version = "0.1.0"
authors = ["Scott Schroeder <scottschroeder@sent.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = { version = "1", features = ["derive"]}
log = "0.4"
failure = "0.1.5"
serde_json = "1.0"
rusoto_core = {version = "0.40.0", default_features = false, features=["rustls"]}
rusoto_s3 = {version = "0.40.0", default_features = false, features=["rustls"]}
